--- a/3/index.html
+++ b/3/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="styles3.css" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
 	<script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
 	<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 		<p id="text5"></p>
 		<p id='click5' onclick='typing5()'>가만히 두면 금방 원래대로 돌아오니까.</p>
 	</h1>
-	<script src="index3.js"></script>
+	<script src="index.js"></script>
 </body>
 
 </html>
