--- a/4/index.html
+++ b/4/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="styles3.css" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
 	<script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
 	<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
@@ -15,16 +15,19 @@
 
 
 <body id="body">
+	<div class="click">
+		<p id='click1' onclick='typing1()'>?</p>
+		<p id='click2' onclick='typing2()'>?</p>
+		<p id='click3' onclick='typing3()'>?</p>
+		<p id='click4' onclick='typing4()'>?</p>
+	</div>
 	<h1 class="text">
 		<p id="txt1"><span id="text1"></span></p>
 		<p id="txt2"><span id="text2"></span></p>
 		<p id="txt3"><span id="text3"></span></p>
 		<p id="txt4"><span id="text4"></span></p>
-		<div class="click">
-			<p id='click' onclick='typing1()'>?</p>
-		</div>
 	</h1>
-	<script src="index3.js"></script>
+	<script src="index.js"></script>
 </body>
 
 </html>
