--- a/4.html
+++ b/4.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="styles.css" rel="stylesheet">
+	<link href="css/styles4.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
 	<script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
 	<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
@@ -15,12 +15,19 @@
 
 
 <body id="body">
+	<div class="click">
+		<p id='click1' onclick='typing1()'>?</p>
+		<p id='click2' onclick='typing2()'>?</p>
+		<p id='click3' onclick='typing3()'>?</p>
+		<p id='click4' onclick='typing4()'>?</p>
+	</div>
 	<h1 class="text">
-		<p id="txt"><span id="text"></span></p>
-		<p id="click" onclick="click()"><a href="file:///Users/lyuchaeeun/Desktop/1.%20VD3/03_%E1%84%91%E1%85%A7%E1%86%AB%E1%84%8C%E1%85%B5%E1%86%B8%E1%84%90%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%91%E1%85%A9%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%84%91%E1%85%B5/0422_Week%208/web/1/index.html">걔</a></p>
+		<p id="txt1"><span id="text1"></span></p>
+		<p id="txt2"><span id="text2"></span></p>
+		<p id="txt3"><span id="text3"></span></p>
+		<p id="txt4"><span id="text4"></span></p>
 	</h1>
-
-	<script src="index.js"></script>
+	<script src="js/4.js"></script>
 </body>
 
 </html>
