--- a/5.html
+++ b/5.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="styles.css" rel="stylesheet">
+	<link href="css/styles5.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
 	<script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
 	<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
@@ -14,18 +14,13 @@
 </head>
 
 
-<body>
+<body id="body">
 	<h1 class="text">
-		<span id="text1"></span>
-		<span id='click1' onclick='typing1()'>근데 불은 연료 없으면 아무것도 아니지 않나?</span>
-		<span id="text2"></span>
-		<span id='click2' onclick='typing2()'>근데 기름이 끼면 얘기가 달라지긴 하지.</span>
-		<span id="text3"></span>
-		<span id='click3' onclick='typing3()'>불이랑은 그렇게 친하면서 물이랑은 절대 안 섞이잖아.</span>
-		<span id="text4"></span>
-		<span id='click4' onclick='typing4()'>근데 불은 연 </span>
+		<p id="txt"><span id="text"></span></p>
+		<p id="click" onclick="click()"><a href="index.html">걔</a></p>
 	</h1>
-	<script src="index.js"></script>
+
+	<script src="js/5.js"></script>
 </body>
 
 </html>
