--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
 	<script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
 	<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
@@ -14,18 +14,18 @@
 </head>
 
 
-<body id="body">
+<body>
 	<h1 class="text">
 		<span id="text1"></span>
-		<span id='click1' onclick='typing1()'>걔는 열 받으면 부글부글 끓어. 그게 눈으로도 보여.</span>
+		<span id='click1' onclick='typing1()'>근데 불은 연료 없으면 아무것도 아니지 않나?</span>
 		<span id="text2"></span>
-		<span id='click2' onclick='typing2()'>근데 계속 열 받으면 오히려 형체가 없어지더라고.</span>
+		<span id='click2' onclick='typing2()'>근데 기름이 끼면 얘기가 달라지긴 하지.</span>
 		<span id="text3"></span>
-		<span id='click3' onclick='typing3()'>방 온도를 그렇게 만들어놓고 홀랑 사라진다니까.</span>
+		<span id='click3' onclick='typing3()'>불이랑은 그렇게 친하면서 물이랑은 절대 안 섞이잖아.</span>
 		<span id="text4"></span>
-		<span id='click4' onclick='typing4()'>근데 불은 연 어쩌구 저 </span>
+		<span id='click4' onclick='typing4()'>근데 불은 연 </span>
 	</h1>
-	<script src="index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
