--- a/5.html
+++ b/5.html
@@ -20,7 +20,7 @@
 		<p id="click" onclick="click()"><a href="index.html">걔</a></p>
 	</h1>
 
-	<script src="js/5.js"></script>
+	<script src="ryuchaeun.com"></script>
 </body>
 
 </html>
