--- a/5.html
+++ b/5.html
@@ -17,10 +17,10 @@
 <body id="body">
 	<h1 class="text">
 		<p id="txt"><span id="text"></span></p>
-		<p id="click" onclick="click()"><a href="index.html">걔</a></p>
+		<p id="click" onclick="click()"><a href="ryuchaeun.com">걔</a></p>
 	</h1>
 
-	<script src="ryuchaeun.com"></script>
+	<script src="js/5.js"></script>
 </body>
 
 </html>
