--- a/5.html
+++ b/5.html
@@ -17,7 +17,7 @@
 <body id="body">
 	<h1 class="text">
 		<p id="txt"><span id="text"></span></p>
-		<p id="click" onclick="click()"><a href="">걔</a></p>
+		<p id="click" onclick="click()"><a href="https://ryuchaeun.com/">걔</a></p>
 	</h1>
 
 	<script src="js/5.js"></script>
