--- a/4.html
+++ b/4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="ko" style="width: 100%;">
+
 <head>
 	<title>류채은 편집타이포그래피</title>
 	<meta charset="utf-8">
@@ -27,6 +28,12 @@
 		<p id="txt3"><span id="text3"></span></p>
 		<p id="txt4"><span id="text4"></span></p>
 	</h1>
+	<div class="clickmo">
+		<p id='click1mo' onclick='typing1()'>?</p>
+		<p id='click2mo' onclick='typing2()'>?</p>
+		<p id='click3mo' onclick='typing3()'>?</p>
+		<p id='click4mo' onclick='typing4()'>?</p>
+	</div>
 	<script src="js/4.js"></script>
 </body>
 
