--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <html lang="ko" style="width: 100%;">
+
 <head>
-	<title>류채은 편집타이포그래피</title>
+	<title>RYU CHAEUN</title>
+	<meta name="description" content="Solid Object [WATER]">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
