--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <head>
 	<title>RYU CHAEUN</title>
+	<meta property="og:image" content="https://cdn.imweb.me/upload/S2022030222ee0b2e93de0/7e394992274a3.png">
 	<meta name="description" content="Solid Object [WATER]">
+	<meta property="og:description" content="Solid Object [WATER]">
+	<link rel="shortcut icon" href="favicon.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
