--- a/5.html
+++ b/5.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="ko" style="width: 100%;">
+
 <head>
 	<title>류채은 편집타이포그래피</title>
 	<meta charset="utf-8">
@@ -17,7 +18,7 @@
 <body id="body">
 	<h1 class="text">
 		<p id="txt"><span id="text"></span></p>
-		<p id="click" onclick="click()"><a href="https://ryuchaeun.com/">걔</a></p>
+		<p id="click" onclick="click()"><a href="https://solidwater.netlify.app/">걔</a></p>
 	</h1>
 
 	<script src="js/5.js"></script>
